Gallery page modification. Show MP4 with <video> instead of heavy GIFs with <img> to reducee load weight.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 		<div class="row">
 			<!-- Gallery column i -->
 			<div class="column">
-				<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D562CAQEEq0jnkoUYKA/comment-image-shrink_8192_1280/0/1687604709063?e=1688443200&v=beta&t=QtQ0GrZzf8nq318523mEFHexxLBU0NMIhqJEyKIL0SE" loading="lazy" alt="🇷🇺 Road network of Western Russia 🛣️.">
+				<video controls muted autoplay loop id="myImg" loading="lazy" title="🇷🇺 Road network of Western Russia 🛣️.">
+					<source src="https://dms.licdn.com/playlist/vid/D5605AQGOb1fhL5e38Q/mp4-720p-30fp-crf28/0/1687603630874?e=1688569200&v=beta&t=DGx6NNhAvLII4A0If1E6_KfyawuSeTJCEv8iZsRWM5Q">
+					<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D562CAQEEq0jnkoUYKA/comment-image-shrink_8192_1280/0/1687604709063?e=1688443200&v=beta&t=QtQ0GrZzf8nq318523mEFHexxLBU0NMIhqJEyKIL0SE" loading="lazy" alt="🇷🇺 Road network of Western Russia 🛣️.">
+				</video>
 				<div class="slideshow-container">
 					<div class="mySlides fade">
 						<div class="numbertext">1 / 3</div>
@@ -82,7 +85,10 @@
       </div>
 			<!-- Gallery column i+1 -->
 			<div class="column">
-				<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D562CAQFR-Mooz28d1w/comment-image-shrink_8192_1280/0/1687179494861?e=1688407200&v=beta&t=g1-gA__e9zrKl9_Zh6koYar1RsSe5kW6M2H5vIMHn24" loading="lazy" alt="🇷🇴 Romania elevation, shaded terrain ⛰️.<br>[COP-DEM/Copernicus DEM]">
+				<video controls muted autoplay loop id="myImg" loading="lazy" title="🇷🇴 Romania elevation, shaded terrain ⛰️.<br>[COP-DEM/Copernicus DEM]">
+					<source src="https://dms.licdn.com/playlist/vid/D5605AQFmZ_9svrGlsA/mp4-720p-30fp-crf28/0/1687178008778?e=1688569200&v=beta&t=LOzKQvWgT2Dh0lFrPTRnSpzkeGpYsgnufdT-XrZm67c">
+					<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D562CAQFR-Mooz28d1w/comment-image-shrink_8192_1280/0/1687179494861?e=1688407200&v=beta&t=g1-gA__e9zrKl9_Zh6koYar1RsSe5kW6M2H5vIMHn24" loading="lazy" alt="🇷🇴 Romania elevation, shaded terrain ⛰️.<br>[COP-DEM/Copernicus DEM]">
+				</video>
 				<div class="slideshow-container">
 					<div class="mySlides fade">
 						<div class="numbertext">1 / 4</div>
