Minor content and links update

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 			<!-- Gallery column i -->
 			<div class="column">
 				<video controls muted autoplay loop id="myImg" loading="lazy" title="🇷🇺 Road network of Western Russia 🛣️.">
-					<source src="https://dms.licdn.com/playlist/vid/D5605AQGOb1fhL5e38Q/mp4-720p-30fp-crf28/0/1687603630874?e=1688569200&v=beta&t=DGx6NNhAvLII4A0If1E6_KfyawuSeTJCEv8iZsRWM5Q">
-					<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D562CAQEEq0jnkoUYKA/comment-image-shrink_8192_1280/0/1687604709063?e=1688443200&v=beta&t=QtQ0GrZzf8nq318523mEFHexxLBU0NMIhqJEyKIL0SE" loading="lazy" alt="🇷🇺 Road network of Western Russia 🛣️.">
+					<source src="https://dms.licdn.com/playlist/vid/D5605AQGOb1fhL5e38Q/mp4-640p-30fp-crf28/0/1687603631138?e=2147483647&v=beta&t=62HL3eqoALq0G0BZrx3pVrJWsXmzASNVPPBkj2jyi-Q">
+					<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D562CAQEEq0jnkoUYKA/comment-image-shrink_8192_480/0/1687604709063?e=1689872400&v=beta&t=B-33JRbLcsQlCm59RGQytNRIumTa8lu6HllDpVyhZH4" loading="lazy" alt="🇷🇺 Road network of Western Russia 🛣️.">
 				</video>
 				<div class="slideshow-container">
 					<div class="mySlides fade">
@@ -36,7 +36,7 @@
 					</div>
 					<div class="mySlides fade">
 						<div class="numbertext">2 / 3</div>
-						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQGNxhkF2BIexQ/feedshare-shrink_2048_1536/0/1685989167188?e=1690416000&v=beta&t=cz-SIXvDRQeU2o-La4xtJNtXOjCdMrBLcno55cgkkhs" loading="lazy" alt="🇦🇫 Afghanistan elevation, shaded terrain ⛰️">
+						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQGNxhkF2BIexQ/feedshare-shrink_2048_1536/0/1685989167188?e=1692230400&v=beta&t=QVaXWEbAGZOnUR4-wpIVHTU3lRKli7oT4MQPAvpGgPY" loading="lazy" alt="🇦🇫 Afghanistan elevation, shaded terrain ⛰️">
 					</div>
 					<div class="mySlides fade">
 						<div class="numbertext">3 / 3</div>
@@ -86,8 +86,8 @@
 			<!-- Gallery column i+1 -->
 			<div class="column">
 				<video controls muted autoplay loop id="myImg" loading="lazy" title="🇷🇴 Romania elevation, shaded terrain ⛰️.<br>[COP-DEM/Copernicus DEM]">
-					<source src="https://dms.licdn.com/playlist/vid/D5605AQFmZ_9svrGlsA/mp4-720p-30fp-crf28/0/1687178008778?e=1688569200&v=beta&t=LOzKQvWgT2Dh0lFrPTRnSpzkeGpYsgnufdT-XrZm67c">
-					<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D562CAQFR-Mooz28d1w/comment-image-shrink_8192_1280/0/1687179494861?e=1688407200&v=beta&t=g1-gA__e9zrKl9_Zh6koYar1RsSe5kW6M2H5vIMHn24" loading="lazy" alt="🇷🇴 Romania elevation, shaded terrain ⛰️.<br>[COP-DEM/Copernicus DEM]">
+					<source src="https://dms-exp3.licdn.com/playlist/vid/D5605AQFmZ_9svrGlsA/mp4-640p-30fp-crf28/0/1687178012367?e=2147483647&v=beta&t=IQ9YQIQ5ifxWkp-86falNxiHN-VKOurSFwgt0IoVXTg">
+					<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D562CAQFR-Mooz28d1w/comment-image-shrink_8192_480/0/1687179494861?e=1689872400&v=beta&t=YbR9jElobOSRN631K6S_VHe1rU-Ed1GWfUsBQBYY0KA" loading="lazy" alt="🇷🇴 Romania elevation, shaded terrain ⛰️.<br>[COP-DEM/Copernicus DEM]">
 				</video>
 				<div class="slideshow-container">
 					<div class="mySlides fade">
@@ -115,7 +115,7 @@
 						<span class="dot"></span>
 					</div>
 				</div>
-				<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D4E10AQF67LO-vqCglQ/image-shrink_800/0/1683705782583?e=1688511600&v=beta&t=35H97trkbuhByqG-4hVkWeGWDhquhjIIrp7hUIzwHGs" loading="lazy" alt="U.S.A. Park and Parkings">
+				<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D4E10AQF67LO-vqCglQ/image-shrink_1280/0/1683705782583?e=1689872400&v=beta&t=I4KRkWArS1Rqe8XNDpDOF6qSOE49yzPF57zN8xxqEdA" loading="lazy" alt="U.S.A. Park and Parkings">
 				<div class="slideshow-container">
 					<div class="mySlides fade">
 						<div class="numbertext">1 / 4</div>
@@ -145,11 +145,15 @@
         <img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQGvkC5UWt5BwQ/feedshare-shrink_2048_1536/0/1680537666983?e=1691020800&v=beta&t=8lmTLQmqkzy3NAKBdPyOpG2xiux0Mku7tG41dHFFpo0" loading="lazy" alt="🌐 Population of Africa [hot]<br>[WGS 84 (EPSG:3857) | UN M49, selective | ⬡ 400m2 Kontur Population dataset - 2022/June]">
         <img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/C4D22AQGNCV6SbFdL5A/feedshare-shrink_1280/0/1679062466798?e=1691020800&v=beta&t=pUYbPxBmTg6o_EUu8uyyPlVVKaW2gwO9hRwVFl7t3zk" loading="lazy" alt="Population of Eastern Europe, Baltics & Scandinavia [plasma]<br>[Custom Orthographic projection | UN M49 | ⬡ 400m2 Kontur Population dataset - 2022/June]">
         <img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/C5622AQEWHYW736Jugg/feedshare-shrink_2048_1536/0/1676136459799?e=1691020800&v=beta&t=xyv-CxycCEO8n1NbYQ5Sv-8w6FLcSlWbKwwwsaWaamc" loading="lazy" alt="🏙️ Downtown Columbus, OH [1m LiDAR, USGS 3DEP]">
-				<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D562CAQHmaYx6P1J60A/comment-image-shrink_8192_1280/0/1677855867187?e=1688511600&v=beta&t=o5OYvOgC6O5Ld-30FjLCB0mtLY1-aUqZgUuHEWe-Wy0" loading="lazy" alt="🏙️ Michigan State University campus in East Lansing, MI [1m LiDAR, USGS 3DEP]">
+				<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D562CAQHmaYx6P1J60A/comment-image-shrink_8192_1280/0/1677855867187?e=1689872400&v=beta&t=wcqhwxCfbMCg7Ps7oK57COCcXIpT2tAqbinarcUw_GE" loading="lazy" alt="🏙️ Michigan State University campus in East Lansing, MI [1m LiDAR, USGS 3DEP]">
         <img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/C5622AQE4wzscINIykg/feedshare-shrink_1280/0/1674579638251?e=1691020800&v=beta&t=e7VraQvnDTNsxjh0FhfQGOWOBme_F4wy9ycNCoYjv34" loading="lazy" alt="🏙️ Downtown Detroit, MI [1m LiDAR, USGS 3DEP]">
       </div>
 			<!-- Gallery column i+2 -->
 			<div class="column">
+				<video controls muted autoplay loop id="myImg" loading="lazy" title="🇫🇷 Road network of the European France 🛣️.">
+					<source src="https://dms-exp3.licdn.com/playlist/vid/D5605AQFFsrDl59Wg1A/mp4-720p-30fp-crf28/0/1688573814897?e=1689872400&v=beta&t=3kTHXVT5_WOtewKD92SICb22rLUQB4-S3T2WseCiKf8">
+					<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D562CAQFkmv-Rv7VvJw/comment-image-shrink_8192_1280/0/1688574686147?e=1689872400&v=beta&t=qHB8SfypFBxqBJdkiqWzVQ4zHPyAsZ93hr6EuZmta9Q" loading="lazy" alt="🇷🇺 Road network of Western Russia 🛣️.">
+				</video>
 				<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQGNOUd8VRcgiA/feedshare-shrink_800/0/1686334322024?e=1690416000&v=beta&t=yNJ3Z-eL4rYhDi5Ut1HJkViq9gsoQ4VzJU0gmuAURoo" loading="lazy" alt="🇺🇿 🇹🇯 🇰🇬 Fergana Valley elevation, ridge plot terrain chart ⛰️<br>[data from terradactile.sparkgeo.com]">
 				<div class="slideshow-container">
 					<div class="mySlides fade">
@@ -177,7 +181,7 @@
 						<span class="dot"></span>
 					</div>
 				</div>
-				<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/C5622AQEx38N_yAMGMw/feedshare-shrink_2048_1536/0/1676990461800?e=1689206400&v=beta&t=jDsvmyNebmqd_naqSlanBmAP5F7kynVSuXBFnPMD21U" loading="lazy" alt="🏔️ Nordic Valley, UT and its alpine resort [1m LiDAR, USGS 3DEP]">
+				<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/C5622AQEx38N_yAMGMw/feedshare-shrink_800/0/1676990453458?e=1692230400&v=beta&t=VdK2WI5g69O9H1mxpbtiUSjJzyrO0MVqj-_yYgwpNzQ" loading="lazy" alt="🏔️ Nordic Valley, UT and its alpine resort [1m LiDAR, USGS 3DEP]">
         <img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQHXOOrWzz5auQ/feedshare-shrink_2048_1536/0/1681830829144?e=1691020800&v=beta&t=tUL8G2kpcjTb3KGM3BK6Rc5Mby9ToipBgtd1e3ESN3A" loading="lazy" alt="Population of Southern Asia [hot]<br>[WGS 84 (EPSG:3857) | UN M49 | ⬡ 400m2 Kontur Population dataset - 2022/June]">
         <img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQHoLIwV8FciYA/feedshare-shrink_1280/0/1680010858526?e=1691020800&v=beta&t=iLrcUsa8Ba6dEDhoMUzpe8vXaC4OE-UylH1A_y29mw0" loading="lazy" alt="🌎 Population of South America [ice]<br>[WGS 84 (EPSG:3857) | UN M49 (selective) | ⬡ 400m2 Kontur Population dataset - 2022/June]">
         <img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/C4E22AQGJ2R9SoHR_7A/feedshare-shrink_2048_1536/0/1678893186742?e=1691020800&v=beta&t=pAnDbzTTsqp2TrGhJu-9oiCWJmWgALduFbK_AVQ3OXM" loading="lazy" alt="Population of Alternative Asia (Altasia) [plasma]<br>[WGS 84 (EPSG:3857) | Article from The Economist & UN M49 | ⬡ 400m2 Kontur Population dataset - 2022/June]">
