--- a/index.html
+++ b/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 	<head>
+
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css.css" />
     <!-- https://stackoverflow.com/questions/59431371/use-emoji-as-favicon-in-websites -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🇼</text></svg>">
     <title>Witold1's Data 💫</title>
+
 	</head>
+
 	<body>
-		<!-- Header -->
-    <div class="topnav">
-      <a class="active" href="#home">📊 Witold's Data Viz Project</a>
-      <!-- <a href="#news">News</a>
+
+		<!-- Site Navigation Bar -->
+    <div class="top-navigation-bar">
+      <a class="active" href="#home">📊 <b>Witold's</b> Data Viz Project</a>
+			<a href="#blog">News</a>
+      <!--
+			<a href="#blog">News</a>
       <a href="#contact">Contact</a>
-      <a href="#about">About</a> -->
+      <a href="#about">About</a>
+			-->
     </div>
 
-		<div class="header">
+		<!-- Page Text Header -->
+		<div class="page-text-header">
 			<h1>Data and information visualization pond ⛵</h1>
       <p>💡 Click image to enlarge. 💡 Check `github` for raw codes and documentations.<br>💡 Check `LinkedIn` for detailed descriptions of every chart.</p>
 		</div>
 
-		<!-- Photo Grid -->
+		<!-- Image Gallery Grid -->
 		<div class="row">
 			<!-- Gallery column i -->
 			<div class="column">
@@ -31,15 +40,15 @@
 				</video>
 				<div class="slideshow-container">
 					<div class="mySlides fade">
-						<div class="numbertext">1 / 3</div>
+						<div class="slideshow-slideshow-numbertext">1 / 3</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQF9YTOTtabnsA/feedshare-shrink_2048_1536/0/1685989183942?e=1689811200&v=beta&t=ZNQVMksKriQ4PZnfj8gUSIrBPQUgWaatqxxUU9fFAdc" loading="lazy" alt="🇦🇫 Afghanistan elevation, shaded terrain ⛰️.<br>[COP-DEM/Copernicus DEM]">
 					</div>
 					<div class="mySlides fade">
-						<div class="numbertext">2 / 3</div>
+						<div class="slideshow-slideshow-numbertext">2 / 3</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQGNxhkF2BIexQ/feedshare-shrink_2048_1536/0/1685989167188?e=1692230400&v=beta&t=QVaXWEbAGZOnUR4-wpIVHTU3lRKli7oT4MQPAvpGgPY" loading="lazy" alt="🇦🇫 Afghanistan elevation, shaded terrain ⛰️">
 					</div>
 					<div class="mySlides fade">
-						<div class="numbertext">3 / 3</div>
+						<div class="slideshow-slideshow-numbertext">3 / 3</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQHFmAZYGQYvyA/feedshare-shrink_2048_1536/0/1685989170736?e=1690416000&v=beta&t=sdwpfTC3GGaoVj5CBY2lN2kXL3kkmi0d_mNbX7JgaTI" loading="lazy" alt="🇦🇫 Afghanistan elevation, shaded terrain ⛰️">
 					</div>
 					<a class="prev">&#10094;</a>
@@ -52,19 +61,19 @@
 				</div>
 				<div class="slideshow-container">
 					<div class="mySlides fade">
-						<div class="numbertext">1 / 4</div>
+						<div class="slideshow-slideshow-numbertext">1 / 4</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQGo7rJdICRsCg/feedshare-shrink_2048_1536/0/1682948871696?e=1690416000&v=beta&t=LEbYdBHHLFNDHBAt8pOpTrV9MJe4Bm2SbnDHmTbvqIs" loading="lazy" alt="🌐 Population of Asia [hot]<br>[WGS 84 (EPSG:3857) | UN M49 | ⬡ 1000m2 Kontur Population dataset - 2022/June]">
 					</div>
 					<div class="mySlides fade">
-						<div class="numbertext">2 / 4</div>
+						<div class="slideshow-slideshow-numbertext">2 / 4</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQGL9NrjUxj8mg/feedshare-shrink_2048_1536/0/1682948872408?e=1690416000&v=beta&t=JEqA8gX8HjOboaDK3rzK-oH-auCQS32nzsv_lpVEj4I" loading="lazy" alt="🌐 Population of Asia [plasma]">
 					</div>
 					<div class="mySlides fade">
-						<div class="numbertext">3 / 4</div>
+						<div class="slideshow-slideshow-numbertext">3 / 4</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQGsGbWcE2zlSA/feedshare-shrink_2048_1536/0/1682948903461?e=1690416000&v=beta&t=RldJjrSirytUOSOH1SZ-TwxHQFb8464W_Ob7_lLkN6Y" loading="lazy" alt="🌐 Population of Asia [terrain]">
 					</div>
 					<div class="mySlides fade">
-						<div class="numbertext">4 / 4</div>
+						<div class="slideshow-slideshow-numbertext">4 / 4</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQEdsV-fHsFsRA/feedshare-shrink_2048_1536/0/1682948871504?e=1690416000&v=beta&t=L6gl1bcbJzqKRj3yEUN3IvIZe7-d2ub460QNM1zfGXw" loading="lazy" alt="🌐 Population of Asia [ice]">
 					</div>
 					<a class="prev">&#10094;</a>
@@ -91,19 +100,19 @@
 				</video>
 				<div class="slideshow-container">
 					<div class="mySlides fade">
-						<div class="numbertext">1 / 4</div>
+						<div class="slideshow-slideshow-numbertext">1 / 4</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQFNExMxMBG8bg/feedshare-shrink_2048_1536/0/1683650812191?e=1690416000&v=beta&t=k4TYsy7yWCoODnhKpqwHS-aXS2xYWd8svkVy7dXBwF4" loading="lazy" alt="Population of Central Asia [hot]<br>[WGS 84 (EPSG:3857) | UN M49 | ⬡ 400m2 Kontur Population dataset - 2022/June]">
 					</div>
 					<div class="mySlides fade">
-						<div class="numbertext">2 / 4</div>
+						<div class="slideshow-slideshow-numbertext">2 / 4</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQHk32jnNQWnhQ/feedshare-shrink_2048_1536/0/1683650810225?e=1690416000&v=beta&t=HQivsyYE9yURYxAPpugwt27TP2JFaIfvVLdQd6N-15w" loading="lazy" alt="Population of Central Asia [ice]">
 					</div>
 					<div class="mySlides fade">
-						<div class="numbertext">3 / 4</div>
+						<div class="slideshow-slideshow-numbertext">3 / 4</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQHSpa59T9UB8Q/feedshare-shrink_2048_1536/0/1683650828590?e=1690416000&v=beta&t=8HTNJ3c4HBIZ_eDHml5y6G4Mc-dV1IBV8uwdnjRYtk0" loading="lazy" alt="Population of Central Asia [white terrain]">
 					</div>
 					<div class="mySlides fade">
-						<div class="numbertext">4 / 4</div>
+						<div class="slideshow-slideshow-numbertext">4 / 4</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQFmFl7u5LO9Ig/feedshare-shrink_2048_1536/0/1683650809987?e=1690416000&v=beta&t=8yTZrnnXzxsHJPhb1GxggbFut4JofIdAtov8nHk2KPQ" loading="lazy" alt="Population of Central Asia [plasma]">
 					</div>
 					<a class="prev">&#10094;</a>
@@ -118,19 +127,19 @@
 				<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D4E10AQF67LO-vqCglQ/image-shrink_1280/0/1683705782583?e=1689872400&v=beta&t=I4KRkWArS1Rqe8XNDpDOF6qSOE49yzPF57zN8xxqEdA" loading="lazy" alt="U.S.A. Park and Parkings">
 				<div class="slideshow-container">
 					<div class="mySlides fade">
-						<div class="numbertext">1 / 4</div>
+						<div class="slideshow-slideshow-numbertext">1 / 4</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQEGe6co0uVg8w/feedshare-shrink_2048_1536/0/1682345150650?e=1690416000&v=beta&t=gILtky4mQFEo2S_KrN0t8bdd2REFFfYiupXsJ2qtUSY" loading="lazy" alt="Population of Southeast Asia [hot]<br>[WGS 84 (EPSG:3857) | UN M49 | ⬡ 400m2 Kontur Population dataset - 2022/June]">
 					</div>
 					<div class="mySlides fade">
-						<div class="numbertext">2 / 4</div>
+						<div class="slideshow-slideshow-numbertext">2 / 4</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQEV1TQ6i4KdWw/feedshare-shrink_2048_1536/0/1682345152526?e=1690416000&v=beta&t=xPV9ajg6y6a2aOHN-3v09arT4C7tDfZ0EnOdgi5UuDY" loading="lazy" alt="Population of Southeast Asia [ice]">
 					</div>
 					<div class="mySlides fade">
-						<div class="numbertext">3 / 4</div>
+						<div class="slideshow-slideshow-numbertext">3 / 4</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQHVCJJhqpsDsg/feedshare-shrink_2048_1536/0/1682345165975?e=1690416000&v=beta&t=pH-Cy2y4vWVo3nr9lD8LUq_SP8J9TJ3ymxkGaoLpYJY" loading="lazy" alt="Population of Southeast Asia [white terrain]">
 					</div>
 					<div class="mySlides fade">
-						<div class="numbertext">4 / 4</div>
+						<div class="slideshow-slideshow-numbertext">4 / 4</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQFWpcnsCbSCgw/feedshare-shrink_2048_1536/0/1682345170632?e=1690416000&v=beta&t=1DJHctYU2cLqlhxWIRZ2nUi15bknWFh9ByTDEVTH6f0" loading="lazy" alt="Population of Southeast Asia [plasma]">
 					</div>
 					<a class="prev">&#10094;</a>
@@ -157,19 +166,19 @@
 				<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D5622AQGNOUd8VRcgiA/feedshare-shrink_800/0/1686334322024?e=1690416000&v=beta&t=yNJ3Z-eL4rYhDi5Ut1HJkViq9gsoQ4VzJU0gmuAURoo" loading="lazy" alt="🇺🇿 🇹🇯 🇰🇬 Fergana Valley elevation, ridge plot terrain chart ⛰️<br>[data from terradactile.sparkgeo.com]">
 				<div class="slideshow-container">
 					<div class="mySlides fade">
-						<div class="numbertext">1 / 4</div>
+						<div class="slideshow-slideshow-numbertext">1 / 4</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D4D22AQGI5IRoFqiYhQ/feedshare-shrink_2048_1536/0/1683214719995?e=1690416000&v=beta&t=jNZ2wk-nQ0CEKUWZ2iNsOH-vhbDqiIWP_Aw_H0-RYtI" loading="lazy" alt="Population of Western Asia [hot]<br>[WGS 84 (EPSG:3857) | UN M49 | ⬡ 400m2 Kontur Population dataset - 2022/June]">
 					</div>
 					<div class="mySlides fade">
-						<div class="numbertext">2 / 4</div>
+						<div class="slideshow-slideshow-numbertext">2 / 4</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D4D22AQHtAV9zbMh4fg/feedshare-shrink_2048_1536/0/1683214701300?e=1690416000&v=beta&t=8RqMfdjM-2PFzLUO-ry4qMksVNy9LzYJl05orcKVmOU" loading="lazy" alt="Population of Western Asia [ice]">
 					</div>
 					<div class="mySlides fade">
-						<div class="numbertext">3 / 4</div>
+						<div class="slideshow-slideshow-numbertext">3 / 4</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D4D22AQFO4SIJDjvakQ/feedshare-shrink_2048_1536/0/1683214722160?e=1690416000&v=beta&t=35NNj25-CIdm-xfQtDt5mKoCB0ZSJjYfcd_c9Bw7Cmo" loading="lazy" alt="Population of Western Asia [white terrain]">
 					</div>
 					<div class="mySlides fade">
-						<div class="numbertext">3 / 4</div>
+						<div class="slideshow-slideshow-numbertext">3 / 4</div>
 						<img class="myImages" id="myImg" src="https://media.licdn.com/dms/image/D4D22AQEXMMMUZuXY4w/feedshare-shrink_2048_1536/0/1683214718075?e=1690416000&v=beta&t=YCd4I9lDGQEnsDJWVPpjYmY6XU9WTAus56tWV_vDDo4" loading="lazy" alt="Population of Western Asia [plasma]">
 					</div>
 					<a class="prev">&#10094;</a>
@@ -195,9 +204,19 @@
 				<div id="caption"></div>
 			</div>
 		</div>
+
+		<!-- Site Bottom Bar -->
+		<div class="bottom-bar">
+			<a href="https://visitorbadge.io/status?path=https%3A%2F%2Fwitold1.github.io%2F">
+				<img src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fwitold1.github.io%2F&countColor=%23263759"/>
+			</a>
+		</div>
+
 	</body>
+
 	<footer>
 		<script src="scripts.js"></script>
 		<link rel="stylesheet" href="css.css" />
 	</footer>
+
 </html>
