--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 			<!-- Gallery column-responsive i -->
 			<div class="column-responsive">
-				<div class="gallery-filter-content Data-Visualization Geography">
+				<div class="gallery-filter-content Geography Eastern-Europe Russia">
 					<video controls muted autoplay loop id="myImg" loading="lazy" title="🇷🇺 Road network of Western Russia 🛣️.">
 						<source src="./assets/content/RoadNetwork-WesternRussia.mp4" type="video/mp4">
 					</video>
@@ -77,7 +77,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="gallery-filter-content Population-Charts All-Asia">
+				<div class="gallery-filter-content Data-Visualization Population-Charts All-Asia">
 					<div class="slideshow-container">
 						<div class="mySlides fade">
 							<div class="slideshow-slide-number-text">1 / 4</div>
@@ -108,7 +108,7 @@
 				<div class="gallery-filter-content 3D-LiDAR South-America Brazil">
 					<video controls muted autoplay loop id="myImg" loading="lazy" alt="🏙️ Central São Paulo, Brazil 🇧🇷 [1m LiDAR, data from GeoSampa]">
 						<source src="./assets/content/3D-LiDAR-charts/LiDAR-SaoPaulo-City-Center-Brazil-Colored-Smaller.mp4" type="video/mp4">
-						<source src="https://uce686126f0db4a4a2fd9edc2f66.dl.dropboxusercontent.com/cd/0/inline/CA9s5uAcWfi8qIZnE79KS7YyYMZsf5Kz86V2J2gx1COuXzjNxAW9abSKIfHC2KKOZ-J6Oi53F_Bg1L92gpb048ft-v7G5XN7d-YfT4yKpAAG6lksuwIa9_yfcY_bMZIKEvrljiFMv78XyTfsnwkF9Va9/file#" type="video/mp4">
+						<source src="https://www.dropbox.com/scl/fi/veyc2okx8woij9qz8pv53/LiDAR-SaoPaulo-City-Center-Brazil-Colored-Smaller.mp4?rlkey=1dowfcsj7auj8clz5o9c9m2zf&raw=1" type="video/mp4">
 					</video>
 				</div>
 				<div class="gallery-filter-content Data-Visualization Population-Charts Eastern-Asia">
@@ -168,7 +168,7 @@
 							<div class="slideshow-slide-number-text">1 / 2</div>
 							<video controls muted autoplay loop id="myImg" loading="lazy" alt="🌆 Downtown Cleveland, OH, USA 🇺🇸<br>[1m LiDAR, data from USGS 3DEP (3D Elevation Program)]</br>">
 								<source src="./assets/content/3D-LiDAR-charts/LiDAR-Cleveland-Downtown-Ohio.mp4" type="video/mp4">
-								<source src="https://uc7e239bb07d93555105af159d73.dl.dropboxusercontent.com/cd/0/inline/CA8nxlldR2to3tbF9QIiIOSvsiY6rV7Y2a0X1uEDuLkK5zFa9tqflweUH_POPZ-rCw7J2YHr8UvY-GUAnKzXSinvLAFK_CCjeDeCeju5G3HH7-pk1Nm4XBGPQXxRQgRuS3N3uVCEWV0d2oyA9CTa_smP/file#" type="video/mp4">
+								<source src="https://www.dropbox.com/scl/fi/yvyl1jmta46bnt6u55qc8/LiDAR-Cleveland-Downtown-Ohio.mp4?rlkey=ihn4a5z1r9roh4shtoctghd4h&raw=1" type="video/mp4">
 							</video>
 						</div>
 						<div class="mySlides fade">
@@ -189,7 +189,7 @@
 							<div class="slideshow-slide-number-text">1 / 2</div>
 							<video controls muted autoplay loop id="myImg" loading="lazy" alt="🏔️ Breckenridge, CO and its alpine resort, USA 🇺🇸<br>[1m LiDAR, data from USGS 3DEP (3D Elevation Program)]</br>">
 								<source src="./assets/content/3D-LiDAR-Charts/LiDAR-Breckenridge-Ski-Resort-Colorado.mp4" type="video/mp4">
-								<source src="https://ucd5988f501bd060ce5b8483ad7d.dl.dropboxusercontent.com/cd/0/inline/CA-ppTGnYBG-NNv-p8d4oFm0larppK1_qKclfEbk9eHXniaz5g5_La77aOHCtnPLtpijk7M6joM8H_M1yBdpPRYAzi-ntaskI0J-ucjfelJ0hTVjhMruKqH7Je0o98XsBKlfctmYYakMPZHmcvyRwJHA/file#" type="video/mp4">
+								<source src="https://www.dropbox.com/scl/fi/0ipmxtw4kh79j9surar0y/LiDAR-Breckenridge-Ski-Resort-Colorado.mp4?rlkey=d6w8tn0vb4lovajyok6epjjc0&raw=1" type="video/mp4">
 							</video>
 						</div>
 						<div class="mySlides fade">
@@ -216,7 +216,7 @@
 						<source src="./assets/content/RoadNetwork-BalticStates.mp4" type="video/mp4">
 					</video>
 				</div>
-				<div class="gallery-filter-content Data-Visualization Geography Romania">
+				<div class="gallery-filter-content Geography Romania">
 					<video controls muted autoplay loop id="myImg" loading="lazy" title="🇷🇴 Romania elevation, shaded terrain ⛰️.<br>[COP-DEM/Copernicus DEM]">
 						<source src="./assets/content/Geography-Terrain/TerrainHillshade-Romania.mp4" type="video/mp4">
 					</video>
@@ -249,7 +249,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="gallery-filter-content Data-Visualization Geography USA-Parks-Parkings">
+				<div class="gallery-filter-content Data-Visualization Geography Urbanism General USA-Parks-Parkings">
 					<img class="myImages" id="myImg" src="./assets/content/USA Parks and Parkings.gif" loading="lazy" alt="🗺️ Comparative analysis and visualization of parking and park footprints across 33 urban downtowns<br>[U.S.A. Park and Parkings | Data from OSM]">
 				</div>
 				<div class="gallery-filter-content Data-Visualization Population-Charts Southeast-Asia">
@@ -309,7 +309,7 @@
 							<div class="slideshow-slide-number-text">1 / 2</div>
 							<video controls muted autoplay loop id="myImg" loading="lazy" alt="🏙️ Downtown Columbus, OH, USA 🇺🇸<br>[1m LiDAR, data from USGS 3DEP (3D Elevation Program)]</br>">
 								<source src="./assets/content/3D-LiDAR-charts/LiDAR-Columbus-Downtown-Ohio.mp4" type="video/mp4">
-								<source src="https://uc266fdceb044ff5e67f7a133bcd.dl.dropboxusercontent.com/cd/0/inline/CA-geyAV73eI5PoPyrr0KoeqO_jkhSkKrjaEZgaJc0PCzhzPorE-kmDX6lAKXQ-wDnkoHmy8SCqwxmHt_vPWRxg3iwlbi235cOfidg9DDE_rjrjBzGh0wtO12wXLfoKfj7DWRNJud7e05IBwYcHLeVWr/file#" type="video/mp4">
+								<source src="https://www.dropbox.com/scl/fi/tcng9jsd7elukqs3405s7/LiDAR-Columbus-Downtown-Ohio.mp4?rlkey=izwmcozzznr9qxi9huy16hgdp&raw=1" type="video/mp4">
 							</video>
 						</div>
 						<div class="mySlides fade">
@@ -329,7 +329,7 @@
 							<div class="slideshow-slide-number-text">1 / 2</div>
 							<video controls muted autoplay loop id="myImg" loading="lazy" loading="lazy" alt="🏙️ Michigan State University campus in East Lansing, MI, USA 🇺🇸<br>[1m LiDAR, data from USGS 3DEP (3D Elevation Program)]</br>">
 								<source src="./assets/content/3D-LiDAR-charts/LiDAR-Michigan-State-University-Lansing-Michigan.mp4" type="video/mp4">
-								<source src="https://uc54f494debb2e9926cb93cc3be8.dl.dropboxusercontent.com/cd/0/inline/CA-6TNWeGNFBME2UYx9VssnrKvR2s2a0EsgrhL5yW_UvtQqCnHc9q55GRhxg488njmdGfK23_aSJ0WLSv10ODeS4_b3qBBwVPbr9nD2kbZ_XJHemsznXQfhNFJltQw0KmzHBW7-ZHjvEGXk0-c-PYXXn/file#" type="video/mp4">
+								<source src="https://www.dropbox.com/scl/fi/og0e4qu79s5og402pgy08/LiDAR-Michigan-State-University-Lansing-Michigan.mp4?rlkey=svjm4u3pybemgj4wtarwtj65y&raw=1" type="video/mp4">
 							</video>
 						</div>
 						<div class="mySlides fade">
@@ -348,10 +348,10 @@
 				<div class="gallery-filter-content 3D-LiDAR USA-Downtowns">
 					<video controls muted autoplay loop id="myImg" loading="lazy" alt="🏙️ Downtown Detroit, MI, USA 🇺🇸<br>[1m LiDAR, data from USGS 3DEP (3D Elevation Program)]</br>">
 						<source src="./assets/content/3D-LiDAR-charts/LiDAR-Detroit-Downtown-Michigan.mp4" type="video/mp4">
-						<source src="https://uc088cc96877291da6fea800fe80.dl.dropboxusercontent.com/cd/0/inline/CA-zK0QE_YUW260T_PKbqx3pBMyOWOdvt-U6rmdemQaikIrAp5QQl0UQOvy2xEVFdrMDp9-wNfShtaspTB65GvqfYsik2WZCQWPIYGCUivgdUbch9LQksfM7x8igt108G5E0IZHzOGeGFuMeIxMo9sPl/file#" type="video/mp4">
+						<source src="https://www.dropbox.com/scl/fi/wrskk04spij4u09do3pcw/LiDAR-Detroit-Downtown-Michigan.mp4?rlkey=q2xa7ln5w6wdjv36mbjmmnulo&raw=1" type="video/mp4">
 					</video>
 				</div>
-				<div class="gallery-filter-content Data-Visualization General">
+				<div class="gallery-filter-content Data-Visualization Presentation General">
 					<div class="slideshow-container">
 						<div class="mySlides fade">
 							<div class="slideshow-slide-number-text">1 / 3</div>
@@ -422,7 +422,7 @@
 				<div class="gallery-filter-content 3D-LiDAR USA-Downtowns">
 					<video controls muted autoplay loop id="myImg" loading="lazy" alt="🏔️ Nordic Valley, UT and its alpine resort, USA 🇺🇸<br>[1m LiDAR, data from USGS 3DEP (3D Elevation Program)]</br>">
 						<source src="./assets/content/3D-LiDAR-charts/LiDAR-Nordic-Valley-Ski-Resort-Utah.mp4" type="video/mp4">
-						<source src="https://uca06be1f78c9459716199dc78d7.dl.dropboxusercontent.com/cd/0/inline/CA-0NUWI2N26obj8ECynSHNUuV-nhj36_HsmpGnJY5HnitCw2ofs7KPYt4lYVcqmLzSrA1XOHu_imudjic3nAIdKqtXcVsR8HE1S-5BFDQdvq5B2H8jegQBc1RI_atWU6AXiZ4SNj0vxAGHyqakH7hxO/file#" type="video/mp4">
+						<source src="https://www.dropbox.com/scl/fi/03byuy1m7lgvjf8s6pk9n/LiDAR-Nordic-Valley-Ski-Resort-Utah.mp4?rlkey=d3x42cv8g1udc16hi0lrf9dui&raw=1" type="video/mp4">
 					</video>
 				</div>
 				<div class="gallery-filter-content Data-Visualization Population-Charts Southern-Asia">
@@ -505,7 +505,7 @@
 							<div class="slideshow-slide-number-text">1 / 2</div>
 							<video controls muted autoplay loop id="myImg" loading="lazy" alt="🏙️ Downtown Seattle, WA and its seaport, USA 🇺🇸<br>[1m LiDAR, data from USGS 3DEP (3D Elevation Program)]</br>">
 								<source src="./assets/content/3D-LiDAR-charts/LiDAR-Seattle-Downtown-Washington.mp4" type="video/mp4">
-								<source src="https://uc98f3cc61be4a3bbe4a30396f36.dl.dropboxusercontent.com/cd/0/inline/CA_AXGvXu6gXp4fzfq_HDsO1YyxIkK4Dt_xla5FM7bSdjKhbW9XY7c0HN6QHrctr0WTuHvQ0CpW-Jp3BheacQ5yk7Jmmk8Z6JI_iguOp-OOjpbfHJdRJfD5iFJ2IDxBxxJnFGykiG-DKGx6x83_mIPVD/file#" type="video/mp4">
+								<source src="https://www.dropbox.com/scl/fi/8clylcd7zz5i5sixeufr0/LiDAR-Seattle-Downtown-Washington.mp4?rlkey=y06g0prs9ahr0j1tzigx283h8&raw=1" type="video/mp4">
 							</video>
 						</div>
 						<div class="mySlides fade">
@@ -523,7 +523,7 @@
 				<div class="gallery-filter-content 3D-LiDAR USA-Downtowns">
 					<video controls muted autoplay loop id="myImg" loading="lazy" alt="🏙️ Miami Beach, FL, USA 🇺🇸<br>[1m LiDAR, data from USGS 3DEP (3D Elevation Program)]</br>">
 						<source src="./assets/content/3D-LiDAR-charts/LiDAR-Miami-Beach-Florida.mp4" type="video/mp4">
-						<source src="https://uca0f0bfbd3d2b8cedfab4b55bb8.dl.dropboxusercontent.com/cd/0/inline/CA-mYv7CmbqoGtyqkKS9WG5KpEvh85GsWOK0TNlHvTwQpVyKbhgFkVUZjIO_uVdrJvSBQzczKwrNE75yWEtn1rxKGWc12kZ01XyJkndIuFMPmzZ9qCbBZoUPUt96_XVC_UkvyWRrqToavVMAXisddbT2/file#" type="video/mp4">
+						<source src="https://www.dropbox.com/scl/fi/hil164tepn719wij91ftw/LiDAR-Miami-Beach-Florida.mp4?rlkey=e1ia5ky94cus2j2m1xv6irkf7&raw=1" type="video/mp4">
 					</video>
 				</div>
 				<div class="gallery-filter-content Data-Visualization General">
@@ -562,7 +562,7 @@
 		<!-- Site Bottom Bar -->
 		<div class="bottom-bar">
 			<a href="https://visitorbadge.io/status?path=https://witold1.github.io/">
-				<img src="https://api.visitorbadge.io/api/visitors?path=https://witold1.github.io/&countColor=%23263759"/>
+				<img src="https://api.visitorbadge.io/api/visitors?path=https://witold1.github.io/&countColor=%23263759" alt="visitor badge"/>
 			</a>
 		</div>
 
