--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
 			<!-- Gallery Content Control Buttons -->
 			<div id="content-control-buttons">
 			  <button class="btn active" onclick="filterSelection('all')">Show all</button>
-			  <button class="btn" onclick="filterSelection('Data-Visualization')">Data Visualization</button>
+			  <button class="btn" onclick="filterSelection('General')">General</button>
 			  <button class="btn" onclick="filterSelection('Population-Charts')">Population Charts</button>
+				<button class="btn" onclick="filterSelection('Road-Networks')">Road Networks</button>
 			  <button class="btn" onclick="filterSelection('3D-LiDAR')">3D/LiDAR</button>
-			  <button class="btn" onclick="filterSelection('Geography')">Geography</button>
+			  <button class="btn" onclick="filterSelection('Geography-Terrain')">Geography/Terrain</button>
 				<!-- <button class="btn" onclick="filterSelection('Asia')">Asia</button> -->
 			</div>
 
@@ -47,12 +48,30 @@
 
 			<!-- Gallery column-responsive i -->
 			<div class="column-responsive">
-				<div class="gallery-filter-content Geography Eastern-Europe Russia">
+				<div class="gallery-filter-content Road-Networks Southeast-Asia Korea">
+					<div class="slideshow-container">
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">1 / 2</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Korean-Peninsula-1.jpeg" loading="lazy" alt="🇰🇷 🇰🇵 Road network of South​ Korea (ROK) and North Korea​ (DPRK​) 🛣️">
+						</div>
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">2 / 2</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Korean-Peninsula-2.jpeg" loading="lazy" alt="🇰🇷 🇰🇵 Road network of South​ Korea (ROK) and North Korea​ (DPRK​) 🛣️">
+						</div>
+						<a class="prev">&#10094;</a>
+						<a class="next">&#10095;</a>
+						<div style="text-align:center">
+							<span class="dot"></span>
+							<span class="dot"></span>
+						</div>
+					</div>
+				</div>
+				<div class="gallery-filter-content Road-Networks Eastern-Europe Russia">
 					<video controls muted autoplay loop id="myImg" loading="lazy" title="🇷🇺 Road network of Western Russia 🛣️.">
 						<source src="./assets/content/RoadNetwork-WesternRussia.mp4" type="video/mp4">
 					</video>
 				</div>
-				<div class="gallery-filter-content Geography Southern-Asia Afghanistan">
+				<div class="gallery-filter-content Geography-Terrain Southern-Asia Afghanistan">
 					<div class="slideshow-container">
 						<div class="mySlides fade">
 							<div class="slideshow-slide-number-text">1 / 3</div>
@@ -183,6 +202,29 @@
 						</div>
 					</div>
 				</div>
+				<div class="gallery-filter-content Data-Visualization Population-Charts South-America">
+					<div class="slideshow-container">
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">1 / 3</div>
+							<img class="myImages" id="myImg" src="./assets/content/Population-Charts/Population-All-South-America-ice.jpeg" loading="lazy" alt="🌐 Population of South America [ice]<br>[WGS 84 (EPSG:3857) | UN M49 | ⬡ 1000m2 Kontur Population dataset - 2022/June]">
+						</div>
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">2 / 3</div>
+							<img class="myImages" id="myImg" src="./assets/content/Population-Charts/Population-All-South-America-plasma.jpeg" loading="lazy" alt="🌐 Population of South America [plasma]">
+						</div>
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">3 / 3</div>
+							<img class="myImages" id="myImg" src="./assets/content/Population-Charts/Population-All-South-America-coloredterrain.jpeg" loading="lazy" alt="🌐 Population of South America [colored-basemap-terrain]">
+						</div>
+						<a class="prev">&#10094;</a>
+						<a class="next">&#10095;</a>
+						<div style="text-align:center">
+							<span class="dot"></span>
+							<span class="dot"></span>
+							<span class="dot"></span>
+						</div>
+					</div>
+				</div>
 				<div class="gallery-filter-content 3D-LiDAR USA-Mountains">
 					<div class="slideshow-container">
 						<div class="mySlides fade">
@@ -211,17 +253,45 @@
 
 			<!-- Gallery column-responsive i+1 -->
 			<div class="column-responsive">
-				<div class="gallery-filter-content Data-Visualization Geography Baltic-States">
+				<div class="gallery-filter-content Road-Networks Europe Balkans Yugoslavia">
+					<div class="slideshow-container">
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">1 / 4</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Post-Yugoslavia-1.jpeg" loading="lazy" alt="🇷🇸 🇸🇮 🇭🇷 🇲🇪 🇽🇰 🇧🇦 🇲🇰 Road network of former Yugoslavia 🛣️">
+						</div>
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">2 / 4</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Post-Yugoslavia-2.jpeg" loading="lazy" alt="🇷🇸 🇸🇮 🇭🇷 🇲🇪 🇽🇰 🇧🇦 🇲🇰 Road network of former Yugoslavia 🛣️">
+						</div>
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">3 / 4</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Post-Yugoslavia-3.jpeg" loading="lazy" alt="🇷🇸 🇸🇮 🇭🇷 🇲🇪 🇽🇰 🇧🇦 🇲🇰 Road network of former Yugoslavia 🛣️">
+						</div>
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">4 / 4</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Post-Yugoslavia-4.jpeg" loading="lazy" alt="🇷🇸 🇸🇮 🇭🇷 🇲🇪 🇽🇰 🇧🇦 🇲🇰 Road network of former Yugoslavia 🛣️">
+						</div>
+						<a class="prev">&#10094;</a>
+						<a class="next">&#10095;</a>
+						<div style="text-align:center">
+							<span class="dot"></span>
+							<span class="dot"></span>
+							<span class="dot"></span>
+							<span class="dot"></span>
+						</div>
+					</div>
+				</div>
+				<div class="gallery-filter-content Road-Networks Geography-Terrain Baltic-States">
 					<video controls muted autoplay loop id="myImg" loading="lazy" title="🇱🇹🇱🇻🇪🇪 Baltic States Road Network and Hillshaded Elevation<br>[COP-DEM/Copernicus DEM]">
 						<source src="./assets/content/RoadNetwork-BalticStates.mp4" type="video/mp4">
 					</video>
 				</div>
-				<div class="gallery-filter-content Geography Romania">
+				<div class="gallery-filter-content Geography-Terrain Europe Romania">
 					<video controls muted autoplay loop id="myImg" loading="lazy" title="🇷🇴 Romania elevation, shaded terrain ⛰️.<br>[COP-DEM/Copernicus DEM]">
 						<source src="./assets/content/Geography-Terrain/TerrainHillshade-Romania.mp4" type="video/mp4">
 					</video>
 				</div>
-				<div class="gallery-filter-content Data-Visualization Population-Charts Central-Asia">
+				<div class="gallery-filter-content Population-Charts Central-Asia">
 					<div class="slideshow-container">
 						<div class="mySlides fade">
 							<div class="slideshow-slide-number-text">1 / 4</div>
@@ -249,10 +319,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="gallery-filter-content Data-Visualization Geography Urbanism General USA-Parks-Parkings">
+				<div class="gallery-filter-content Geography-Terrain Urbanism General USA-Parks-Parkings">
 					<img class="myImages" id="myImg" src="./assets/content/USA Parks and Parkings.gif" loading="lazy" alt="🗺️ Comparative analysis and visualization of parking and park footprints across 33 urban downtowns<br>[U.S.A. Park and Parkings | Data from OSM]">
 				</div>
-				<div class="gallery-filter-content Data-Visualization Population-Charts Southeast-Asia">
+				<div class="gallery-filter-content Population-Charts Southeast-Asia">
 					<div class="slideshow-container">
 						<div class="mySlides fade">
 							<div class="slideshow-slide-number-text">1 / 4</div>
@@ -280,7 +350,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="gallery-filter-content Data-Visualization Population-Charts Eastern-Europe">
+				<div class="gallery-filter-content Population-Charts Eastern-Europe">
 					<div class="slideshow-container">
 						<div class="mySlides fade">
 							<div class="slideshow-slide-number-text">1 / 3</div>
@@ -378,17 +448,73 @@
 
 			<!-- Gallery column-responsive i+2 -->
 			<div class="column-responsive">
-				<div class="gallery-filter-content Data-Visualization Geography Baltic-States-Terrain">
+				<div class="gallery-filter-content Road-Networks Central-Asia">
+					<div class="slideshow-container">
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">1 / 4</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Central-Asia-1.jpeg" loading="lazy" alt="🇰🇿 🇰🇬 🇺🇿 🇹🇯 🇹🇲 Road network of Central Asia 🛣️</br>">
+						</div>
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">2 / 4</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Central-Asia-2.jpeg" loading="lazy" alt="🇰🇿 🇰🇬 🇺🇿 🇹🇯 🇹🇲 Road network of Central Asia 🛣️</br>">
+						</div>
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">3 / 4</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Central-Asia-3.jpeg" loading="lazy" alt="🇰🇿 🇰🇬 🇺🇿 🇹🇯 🇹🇲 Road network of Central Asia 🛣️</br>">
+						</div>
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">4 / 4</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Central-Asia-4.jpeg" loading="lazy" alt="🇰🇿 🇰🇬 🇺🇿 🇹🇯 🇹🇲 Road network of Central Asia 🛣️</br>">
+						</div>
+						<a class="prev">&#10094;</a>
+						<a class="next">&#10095;</a>
+						<div style="text-align:center">
+							<span class="dot"></span>
+							<span class="dot"></span>
+							<span class="dot"></span>
+							<span class="dot"></span>
+						</div>
+					</div>
+				</div>
+				<div class="gallery-filter-content Road-Networks Northern-Africa Maghreb">
+					<div class="slideshow-container">
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">1 / 4</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Northern-Africa-1.jpeg" loading="lazy" alt="🇩🇿 🇲🇦 🇪🇭 🇹🇳 🇱🇾 🇪🇬 🇸🇩 🇸🇸 Road network of Northern Africa states 🛣️">
+						</div>
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">2 / 4</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Northern-Africa-2.jpeg" loading="lazy" alt="🇩🇿 🇲🇦 🇪🇭 🇹🇳 🇱🇾 🇪🇬 🇸🇩 🇸🇸 Road network of Northern Africa states 🛣️">
+						</div>
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">3 / 4</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Northern-Africa-3.jpeg" loading="lazy" alt="🇩🇿 🇲🇦 🇪🇭 🇹🇳 🇱🇾 🇪🇬 🇸🇩 🇸🇸 Road network of Northern Africa states 🛣️">
+						</div>
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">4 / 4</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Northern-Africa-4.jpeg" loading="lazy" alt="🇩🇿 🇲🇦 🇪🇭 🇹🇳 🇱🇾 🇪🇬 🇸🇩 🇸🇸 Road network of Northern Africa states 🛣️">
+						</div>
+						<a class="prev">&#10094;</a>
+						<a class="next">&#10095;</a>
+						<div style="text-align:center">
+							<span class="dot"></span>
+							<span class="dot"></span>
+							<span class="dot"></span>
+							<span class="dot"></span>
+						</div>
+					</div>
+				</div>
+				<div class="gallery-filter-content Data-Visualization Geography-Terrain Baltic-States-Terrain">
 					<video controls muted autoplay loop id="myImg" loading="lazy" title="🇱🇹🇱🇻🇪🇪 Baltic States Hillshaded Elevation<br>[COP-DEM/Copernicus DEM]">
 						<source src="./assets/content/Geography-Terrain/TerrainHillshaded-BalticStates.mp4" type="video/mp4">
 					</video>
 				</div>
-				<div class="gallery-filter-content Data-Visualization Geography France-Metropilitan-Roads">
+				<div class="gallery-filter-content Road-Networks France-Metropilitan-Roads">
 					<video controls muted autoplay loop id="myImg" loading="lazy" title="🇫🇷 Road network of the European France 🛣️.">
 						<source src="./assets/content/RoadNetwork-France.mp4" type="video/mp4">
 					</video>
 				</div>
-				<div class="gallery-filter-content Data-Visualization Geography Ridge-Plot-Ferghana">
+				<div class="gallery-filter-content Data-Visualization Geography-Terrain Ridge-Plot-Ferghana">
 					<img class="myImages" id="myImg" src="./assets/content/Geography-Terrain/Ridge-Plot-Ferghana-Valley.jpeg" loading="lazy" alt="🇺🇿 🇹🇯 🇰🇬 Fergana Valley elevation, ridge plot terrain chart ⛰️<br>[data from terradactile.sparkgeo.com]">
 				</div>
 				<div class="gallery-filter-content Data-Visualization Population-Charts Western-Asia">
@@ -447,29 +573,6 @@
 						<a class="next">&#10095;</a>
 						<div style="text-align:center">
 							<span class="dot"></span>
-							<span class="dot"></span>
-							<span class="dot"></span>
-							<span class="dot"></span>
-						</div>
-					</div>
-				</div>
-				<div class="gallery-filter-content Data-Visualization Population-Charts South-America">
-					<div class="slideshow-container">
-						<div class="mySlides fade">
-							<div class="slideshow-slide-number-text">1 / 3</div>
-							<img class="myImages" id="myImg" src="./assets/content/Population-Charts/Population-All-South-America-ice.jpeg" loading="lazy" alt="🌐 Population of South America [ice]<br>[WGS 84 (EPSG:3857) | UN M49 | ⬡ 1000m2 Kontur Population dataset - 2022/June]">
-						</div>
-						<div class="mySlides fade">
-							<div class="slideshow-slide-number-text">2 / 3</div>
-							<img class="myImages" id="myImg" src="./assets/content/Population-Charts/Population-All-South-America-plasma.jpeg" loading="lazy" alt="🌐 Population of South America [plasma]">
-						</div>
-						<div class="mySlides fade">
-							<div class="slideshow-slide-number-text">3 / 3</div>
-							<img class="myImages" id="myImg" src="./assets/content/Population-Charts/Population-All-South-America-coloredterrain.jpeg" loading="lazy" alt="🌐 Population of South America [colored-basemap-terrain]">
-						</div>
-						<a class="prev">&#10094;</a>
-						<a class="next">&#10095;</a>
-						<div style="text-align:center">
 							<span class="dot"></span>
 							<span class="dot"></span>
 							<span class="dot"></span>
