Added new content. Updated README.md.

--- a/index.html
+++ b/index.html
@@ -253,6 +253,39 @@
 
 			<!-- Gallery column-responsive i+1 -->
 			<div class="column-responsive">
+				<div class="gallery-filter-content Road-Networks Asia Southeast-Asia Indian-Peninsula">
+					<div class="slideshow-container">
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">1 / 5</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Indian-Peninsula-1.jpeg" loading="lazy" alt="🇮🇳 🇵🇰 🇧🇩 🇳🇵 🇱🇰 🇲🇻 🇧🇹 Road network of Indian subcontinent 🛣️">
+						</div>
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">2 / 5</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Indian-Peninsula-2.jpeg" loading="lazy" alt="🇮🇳 🇵🇰 🇧🇩 🇳🇵 🇱🇰 🇲🇻 🇧🇹 Road network of Indian subcontinent 🛣️">
+						</div>
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">3 / 5</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Indian-Peninsula-3.jpeg" loading="lazy" alt="🇮🇳 🇵🇰 🇧🇩 🇳🇵 🇱🇰 🇲🇻 🇧🇹 Road network of Indian subcontinent 🛣️">
+						</div>
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">4 / 5</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Indian-Peninsula-4.jpeg" loading="lazy" alt="🇮🇳 🇵🇰 🇧🇩 🇳🇵 🇱🇰 🇲🇻 🇧🇹 Road network of Indian subcontinent 🛣️">
+						</div>
+						<div class="mySlides fade">
+							<div class="slideshow-slide-number-text">5 / 5</div>
+							<img class="myImages" id="myImg" src="./assets/content/Road-Networks/RoadNetwork-Indian-Peninsula-5.jpeg" loading="lazy" alt="🇮🇳 🇵🇰 🇧🇩 🇳🇵 🇱🇰 🇲🇻 🇧🇹 Road network of Indian subcontinent 🛣️">
+						</div>
+						<a class="prev">&#10094;</a>
+						<a class="next">&#10095;</a>
+						<div style="text-align:center">
+							<span class="dot"></span>
+							<span class="dot"></span>
+							<span class="dot"></span>
+							<span class="dot"></span>
+							<span class="dot"></span>
+						</div>
+					</div>
+				</div>
 				<div class="gallery-filter-content Road-Networks Europe Balkans Yugoslavia">
 					<div class="slideshow-container">
 						<div class="mySlides fade">
